--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="css/style-core.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/stallion-style-custom.css" type="text/css" media="all">
     <link rel="stylesheet" href="css/rs6.css" type="text/css" media="all">
-    <link rel="icon" href="images/cropped-favicon-circle-32x32.png" sizes="32x32">
-    <link rel="icon" href="images/cropped-favicon-circle-192x192.png" sizes="192x192">
+    <link rel="icon" href="images/favicon.png" sizes="32x32">
+    <link rel="icon" href="images/favicon.png" sizes="192x192">
     <link rel="apple-touch-icon" href="images/cropped-favicon-circle-180x180.png">
 
 </head>
@@ -268,7 +268,7 @@
                                                             <h3 class="gdlr-core-column-service-title gdlr-core-skin-title" style="font-size: 28px; font-weight: 700; text-transform: none;">My Story</h3>
                                                         </div>
                                                         <div class="gdlr-core-column-service-content" style="font-size: 16px; font-weight: 400; text-transform: none;">
-                                                            <p>Hello, I’m Praveen, a certified personal trainer with over 5 years of experience in the fitness industry. My passion for fitness began since I was in college and has grown into a career dedicated to helping others achieve their health and fitness goals.</p>
+                                                            <p>Hello, I’m Praveen, a certified personal trainer with over 25 years of experience in the fitness industry. My passion for fitness began since I was in college and has grown into a career dedicated to helping others achieve their health and fitness goals.</p>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -591,7 +591,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-counter-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-center-align" style="padding-bottom: 0px;">
                                                     <div class="gdlr-core-counter-item-number gdlr-core-skin-title gdlr-core-title-font" style="font-size: 60px; font-weight: 700; font-style: italic;">
-                                                        <span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="" data-counter-start="0" data-counter-end="5">0</span>
+                                                        <span class="gdlr-core-counter-item-count gdlr-core-js" data-duration="" data-counter-start="0" data-counter-end="25">0</span>
                                                     </div>
                                                     <div class="gdlr-core-counter-item-bottom-text gdlr-core-skin-content" style="font-size: 27px; font-weight: 700; font-style: normal;">Years of Experience</div>
                                                 </div>
